--- a/index2.html
+++ b/index2.html
@@ -12,6 +12,7 @@
     <script src="js/lightbox.js"></script>
     <script src="js/jqueryPonente.js"></script>
     <script src="js/validaciones.js"></script>
+    <script src="js/jquery.validarForm_plugin.js"></script>
     
     <title>DAWmana Daniel Gestino</title>
 </head>
@@ -28,21 +29,21 @@
             <h3>Actividad a Realizar</h3>
             <div class='form'>
             <label>Introduce Nombre </label>
-            <input type='text' id=nombre required />
+            <input type='text' id=Nombre regex="^[A-Z][a-z0-9ü_]{3,14}" required />
             <p id=errNombre></p>
             <label>Descripcion breve</label>
-            <input type='text' id=apellidos required/>
-            <p id=errApellido></p>
+            <input type='text' id=Descripcion required/>
+            <p id=errDescripcion></p>
             <label>Descripcion extensa</label>
-            <textarea id=dni required></textarea>
-            <p id=errDni></p>
+            <textarea id=Extensa required></textarea>
+            <p id=errExtensa></p>
             <label>Introduce tu URL de imagen</label>
-            <input type='text' id=correo required/>
-            <p id=errCorreo></p>
+            <input type='text' id=Imagen required/>
+            <p id=errImagen></p>
             <label>Material de Ponente</label>
-            <textarea  required></textarea>
+            <textarea ></textarea>
             <label>Material de Asistentes</label>
-            <textarea  required></textarea>
+            <textarea ></textarea>
             <label>Nº Asistentes</label>
             <input type="number"  required/>
             <input type='button' id="validar" value='Enviar'/>
